@@ -1,3 +1,0 @@
-SUBDIRS=src
-changelog:
-		git --no-pager log --format="%ai %aN %n%n%x09* %s%d%n" > ChangeLog
