@@ -1,2 +1,3 @@
+03/23/2023: convert pullseq to use cmake
 02/27/2013: converted pullseq to use autotools for
             configuration/building/installation
